# InstanceSegmentationAnnotationTool

./: CMakeLists.txt  README.md  sort.py
GUI/: InstanceSegmentationAnnotationTool.qrc  InstanceSegmentationAnnotationTool.ui  KITECH.rc
include/: ISAT.h  InstanceSegmentationAnnotationTool.h  utils.h
src/: ISAT.cpp  InstanceSegmentationAnnotationTool.cpp  main.cpp  utils.cpp
